--- a/css/style.css
+++ b/css/style.css
@@ -367,7 +367,7 @@ body {
 .product-card-title {
   color: #292d33;
   margin: 0;
-  font-family: Noto Sans;
+
   font-size: 28px;
   font-weight: 400;
   line-height: 160%;
@@ -379,7 +379,7 @@ body {
   margin: 0;
   padding-top: 0.8rem;
   color: #828a99;
-  font-family: Noto Sans;
+
   font-size: 16px;
   font-weight: 400;
   line-height: 160%;
@@ -424,7 +424,7 @@ body {
   grid-area: title;
   margin: 0;
   color: rgb(41, 45, 51);
-  font-family: Noto Sans;
+
   font-size: 1.75rem;
   font-weight: 400;
   line-height: 160%;
@@ -433,7 +433,7 @@ body {
 .trademarks-card-text {
   grid-area: text;
   color: rgb(130, 138, 153);
-  font-family: Noto Sans;
+
   font-size: 16px;
   font-weight: 400;
   line-height: 160%;
@@ -482,7 +482,7 @@ body {
 }
 .founder-text {
   color: rgb(130, 138, 153);
-  font-family: Noto Sans;
+
   font-size: 16px;
   font-weight: 400;
   line-height: 160%;
@@ -511,7 +511,7 @@ body {
   gap: 1.25rem;
   margin-bottom: 1.4375rem;
   color: rgb(41, 45, 51);
-  font-family: Noto Sans;
+
   font-size: 1rem;
   font-weight: 400;
   line-height: 160%;
@@ -595,6 +595,9 @@ body {
   justify-content: end;
 }
 /* ---------------------SECTION CTA---------------------- */
+.cta {
+  padding-bottom: 3.1875rem;
+}
 .bg-grey {
   background: rgb(240, 242, 245);
 }
@@ -651,8 +654,9 @@ body {
   padding: 1.25rem 1.875rem;
   background-color: transparent;
   outline: none;
-  border: 1px solid transparent;
+  border: 1px solid rgb(228, 228, 235);
 }
+
 .input:focus {
   border: 1px solid rgb(92, 142, 230);
 }
@@ -701,6 +705,122 @@ body {
   font-weight: 400;
   line-height: 160%;
 }
+/* --------------------- FOOTER ---------------------- */
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 3.125rem;
+  color: #292d33;
+}
+.footer-logo {
+  width: 12.5rem;
+  height: 3.75rem;
+}
+.footer-phone {
+  display: flex;
+  align-items: center;
+  color: inherit;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 160%;
+  text-decoration-line: underline;
+  padding-left: 100px;
+}
+.footer-info {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  gap: 10px;
+}
+.footer-info-address,
+.footer-info-email {
+  font-style: inherit;
+  text-decoration: inherit;
+  color: inherit;
+}
+.footer-social {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.footer-social-link {
+  text-decoration: none;
+}
+.footer-separator {
+  color: #ebebf0;
+  background-color: #ebebf0;
+  height: 1px;
+}
+.footer-bottom {
+  display: flex;
+  padding-top: 37px;
+}
+.footer-menu-wrapper:last-child {
+  margin-left: 10rem;
+}
+.footer-menu-title {
+  margin-top: 0;
+  margin-bottom: 1.875rem;
+  color: rgb(41, 45, 51);
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 160%;
+}
+.footer-menu-list {
+  margin: 0;
+  padding-left: 1.25rem;
+  list-style: none;
+}
+.footer-menu-column-2 {
+  columns: 20rem auto;
+  min-width: 45.9375rem;
+}
+.footer-menu-link {
+  text-decoration: none;
+  color: #828a99;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 160%;
+  margin-bottom: 0.9375rem;
+  display: block;
+}
+.footer-menu-link-bold {
+  color: rgb(41, 45, 51);
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 160%;
+  text-decoration: none;
+  margin-bottom: 1.875rem;
+}
+.footer-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 25px;
+  padding-bottom: 20px;
+  list-style: normal;
+  color: #828a99;
+}
+.footer-legal {
+  display: flex;
+  align-items: center;
+  gap: 4.375rem;
+}
+.footer-copyright,
+.footer-policy,
+.footer-author {
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 160%;
+  color: inherit;
+}
+.footer-author {
+  display: flex;
+  align-items: center;
+}
+.made-in {
+  margin-right: 10px;
+}
 @media (max-width: 1700px) {
   html {
     font-size: 14px;
@@ -746,6 +866,9 @@ body {
   }
   .cta-image {
     max-width: 40rem;
+  }
+  .footer-logo {
+    max-width: 11rem;
   }
 }
 @media (max-width: 1200px) {
@@ -804,6 +927,19 @@ body {
   .cta-image {
     max-width: 30rem;
     bottom: 6.125rem;
+  }
+  .footer-menu-column-2 {
+    min-width: 43rem;
+  }
+  .footer-menu-list {
+    padding-left: 0.25rem;
+  }
+  .footer-phone {
+    font-size: 23px;
+    padding-left: 0;
+  }
+  .footer-menu-wrapper:last-child {
+    margin-left: 9rem;
   }
 }
 @media (max-width: 992px) {
@@ -994,6 +1130,18 @@ body {
   .cta-form {
     max-width: 100%;
   }
+  .footer-logo {
+    max-width: 9rem;
+  }
+  .footer-phone {
+    font-size: 14px;
+  }
+  .footer-menu-wrapper:last-child {
+    margin-left: 2rem;
+  }
+  .footer-menu-wrapper:first-child {
+    width: 38rem;
+  }
 }
 @media (max-width: 768px) {
   .container {
@@ -1018,6 +1166,38 @@ body {
   .clients-logo-list {
     grid-template-columns: 100px auto 100px;
   }
+  .footer-menu-column-2 {
+    min-width: 30rem;
+  }
+  .footer-menu-wrapper:first-child {
+    width: 23rem;
+  }
+  .footer-top {
+    flex-direction: column;
+  }
+  .footer-bottom {
+    justify-content: space-between;
+  }
+  .footer-logo {
+    max-width: 12rem;
+    margin-bottom: 2.375rem;
+  }
+  .footer-phone {
+    font-size: 2.35rem;
+    margin-bottom: 1.95rem;
+    padding-left: 0;
+  }
+  .footer-info {
+    margin-bottom: 18px;
+    gap: 15px;
+    font-size: 14px;
+    padding-left: 6px;
+  }
+  .footer-social {
+    margin-top: 1.05rem;
+    padding-left: 0.375rem;
+    gap: 1.9125rem;
+  }
 }
 @media (max-width: 620px) {
   .container {
@@ -1041,7 +1221,7 @@ body {
     justify-content: center;
   }
   .mobile-menu-toggle {
-    padding: 2.3rem;
+    padding: 2.22rem;
   }
   .logo-svg {
     max-width: 10rem;
@@ -1214,5 +1394,51 @@ body {
   }
   .cta-form {
     margin-top: 20px;
+  }
+  .footer-bottom {
+    flex-direction: column;
+    padding-bottom: 0;
+    padding-top: 1rem;
+  }
+  .footer-menu-list {
+    padding-left: 1.25rem;
+  }
+  .footer-menu-wrapper:last-child {
+    margin-left: 0;
+    padding-top: 21px;
+  }
+  .footer-menu-link-bold {
+    margin-bottom: 2.4125rem;
+  }
+  .footer-menu-wrapper:nth-child(2) {
+    padding-top: 2.125rem;
+  }
+  .footer-menu-list-pad-0 {
+    padding: 0;
+  }
+  .footer-wrapper {
+    flex-direction: column;
+  }
+  .footer-legal {
+    flex-direction: column;
+    gap: 0;
+    align-items: start;
+    gap: 10px;
+  }
+  .footer-wrapper {
+    align-items: start;
+    gap: 10px;
+  }
+  .footer-copyright {
+    margin: 0;
+  }
+  .footer-logo {
+    max-width: 14rem;
+    width: 160px;
+    height: 66px;
+    margin-bottom: 1.9375rem;
+  }
+  .cta {
+    padding-bottom: 1.1875rem;
   }
 }
